tetrate/TIS1401/e2e/good-resource.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: good-resource-1
  namespace: test
spec:
  parentRefs:
  - name: existing-gateway-1
    namespace: test
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/myapp"
    backendRefs:
    - name: my-app-service
      port: 80
