tetrate/TIS1401/e2e/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-existing-gateway
spec:
  validationFailureAction: Enforce
