tetrate/TIS1401/e2e/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-check-existing-gateway
spec:
  steps:
    - name: apply-httproute-policy
      try:
        - apply:
            file: ../check-existing-gateway.yaml
        - assert:
            file: policy-assert.yaml

    - name: apply-gateway-resource
      try: 
        - apply:
            file: gateway-resource.yaml
            
    - name: apply-good-resource
      try:
        - apply:
            file: good-resource.yaml

    - name: apply-bad-resource (should fail)
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: bad-resource.yaml
